syntax = "proto3";
package proto;

option go_package = "./pb";

message AccountBuyer {
    string id = 1;
    BaseInfo base_info = 2;
}

message AccountSeller {
    string id = 1;
    BaseInfo base_info = 2;
    string store_name = 3;
}

message BaseInfo {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    string address = 5;
}

message PostAccountBuyerRequest {
    BaseInfo base_info = 1;
    string password = 2;
}

message PostAccountBuyerResponse {
    AccountBuyer account = 1;
}

message PostAccountSellerRequest {
    BaseInfo base_info = 1;
    string password = 2;
    string store_name = 3;
}

message PostAccountSellerResponse {
    AccountSeller account = 1;
}

message LoginAccountRequest {
    string email = 1;
    string password = 2;
}

message LoginAccountResponse {
    string token = 1;
    AccountBuyer buyer = 2;
    AccountSeller seller = 3;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountSellerResponse {
    AccountSeller account = 1;
}

message GetAccountSellersRequest {
    uint64 skip = 1;
    uint64 take = 2;
    repeated string ids = 3;
}

message GetAccountSellersResponse {
    repeated AccountSeller accounts = 1;
}

service AccountService {
    rpc PostAccountBuyer (PostAccountBuyerRequest) returns (PostAccountBuyerResponse) {}
    rpc PostAccountSeller (PostAccountSellerRequest) returns (PostAccountSellerResponse) {}

    rpc UpdateAccountSeller (AccountSeller) returns (AccountSeller) {}
    rpc UpdateAccountBuyer (AccountBuyer) returns (AccountBuyer) {}

    rpc GetAccountBuyer (GetAccountRequest) returns (AccountBuyer) {}
    rpc GetAccountSeller (GetAccountRequest) returns (AccountSeller) {}

    rpc GetAccountSellers (GetAccountSellersRequest) returns (GetAccountSellersResponse) {}

    rpc LoginAccount (LoginAccountRequest) returns (LoginAccountResponse) {}
}